--- a/mindx_images_app/package.json
+++ b/mindx_images_app/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.29.0",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-async-errors": "^3.1.1",
@@ -20,7 +21,9 @@
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.4.1",
         "mongoose": "^6.2.8",
-        "npm": "^8.5.5"
+        "multer": "^1.4.4",
+        "npm": "^8.5.5",
+        "streamifier": "^0.1.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
